# mcp-ssh-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  run_server.sh  run_test.sh
.github/workflows/: publish-pypi.yml
scripts/: test_http_client.py
src/mcp_ssh_server/: __main__.py  server.py
src/mcp_ssh_wrapper/: __main__.py  server.py  ssh_wrapper.py
tests/: test_ssh_wrapper.py
