[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-ssh-wrapper"
version = "0.1.0"
description = "An MCP server that executes remote commands through the host ssh binary."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "megascope" }
]
keywords = ["mcp", "ssh", "server"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
mcp-ssh-wrapper = "mcp_ssh_wrapper.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ssh_wrapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
